removed musl added fsl-ppc back in

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -33,7 +33,6 @@ BASELAYERS ?= " \
   ${TOPDIR}/sources/meta-telephony \
   ${TOPDIR}/sources/meta-beagleboard/meta-beagleboard-extras \
   ${TOPDIR}/sources/meta-photography \
-  ${TOPDIR}/sources/meta-musl \
   ${TOPDIR}/sources/meta-maker \
 "
 
@@ -43,6 +42,7 @@ BSPLAYERS ?= " \
   ${TOPDIR}/sources/meta-ti \
   ${TOPDIR}/sources/meta-fsl-arm \
   ${TOPDIR}/sources/meta-fsl-arm-extra \
+  ${TOPDIR}/sources/meta-fsl-ppc \
   ${TOPDIR}/sources/meta-altera \
   ${TOPDIR}/sources/meta-jetson-tk1 \
   ${TOPDIR}/sources/meta-nslu2 \
