--- a/conf/local.conf
+++ b/conf/local.conf
@@ -3,11 +3,9 @@
 CONF_VERSION = "1"
 
 # Added required meta-java variables
-PREFERRED_PROVIDER_virtual/java-initial = "cacao-initial"
+PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
-PREFERRED_VERSION_openjdk-7-jre = "25b30-2.3.12"
-PREFERRED_VERSION_icedtea7-native = "2.1.3"
 
 #INHERIT += "rm_work"
 
