--- a/conf/local.conf
+++ b/conf/local.conf
@@ -6,8 +6,11 @@ CONF_VERSION = "1"
 PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
+
 PREFERRED_VERSION_openjdk-7-jre = "85b01-2.6.1"
 PREFERRED_VERSION_icedtea7-native = "2.1.3"
+
+PREFERRED_PROVIDER_openjdk-7-jre = "openjdk-7-jre"
 
 #INHERIT += "rm_work"
 
