--- a/conf/local.conf
+++ b/conf/local.conf
@@ -7,6 +7,13 @@ PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 
+# For openjdk-8-jre
+PREFERRED_VERSION_openjdk-6-jre = "6b32-1.13.4"
+PREFERRED_VERSION_icedtea6-native = "1.8.11"
+
+PREFERRED_PROVIDER_openjdk-6-jre = "openjdk-6-jre"
+
+# For openjdk-7-jre
 PREFERRED_VERSION_openjdk-7-jre = "85b01-2.6.1"
 PREFERRED_VERSION_icedtea7-native = "2.1.3"
 
