--- a/conf/local.conf
+++ b/conf/local.conf
@@ -2,10 +2,26 @@
 # CONF_VERSION is increased each time build/conf/ changes incompatibly
 CONF_VERSION = "1"
 
-# Added required meta-java variables for openjdk-8-jre
+# Required meta-java variables
 PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
+
+#For openjdk6:
+#PREFERRED_VERSION_openjdk-6-jre = "6b24-1.11.9"
+#or
+#PREFERRED_VERSION_openjdk-6-jre = "6b27-1.12.8"
+#or
+PREFERRED_VERSION_openjdk-6-jre = "6b32-1.13.4"
+PREFERRED_VERSION_icedtea6-native = "1.8.11"
+
+#For openjdk7:
+PREFERRED_VERSION_openjdk-7-jre = "85b01-2.6.1"
+PREFERRED_VERSION_icedtea7-native = "2.1.3"
+
+#Sometimes the following is needed:
+PREFERRED_PROVIDER_openjdk-6-jre = "openjdk-6-jre"
+PREFERRED_PROVIDER_openjdk-7-jre = "openjdk-7-jre"
 
 #INHERIT += "rm_work"
 
